--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -21,5 +21,18 @@
             android:textStyle="bold"
             app:layout_constraintTop_toTopOf="parent"/>
 
+        <Button
+            android:id="@+id/imageview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:onClick="ViewClick"
+            android:text="Kotlin ImageView"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/button"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
