--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -34,5 +34,18 @@
             android:layout_marginTop="1dp"
             app:layout_constraintTop_toBottomOf="@id/button"/>
 
+        <Button
+            android:id="@+id/edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:onClick="ViewClick"
+            android:text="Kotlin EditText"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/imageview"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
