--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -47,5 +47,18 @@
             android:layout_marginTop="1dp"
             app:layout_constraintTop_toBottomOf="@id/imageview"/>
 
+        <Button
+            android:id="@+id/textviewandradiobutton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:onClick="ViewClick"
+            android:text="Kotlin TextView And RadioButton"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/edittext"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
