--- a/app/src/main/res/layout/activity_check_box14.xml
+++ b/app/src/main/res/layout/activity_check_box14.xml
@@ -4,37 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TextViewAndRadioButton.TextViewAndRadioButtonActivity15">
+    tools:context=".CheckBox.CheckBoxActivity14">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="match_parent"
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="CheckBox"
+        android:checked="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
-        <RadioButton
-            android:id="@+id/maleBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Male"/>
-        <RadioButton
-            android:id="@+id/femaleBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Female"/>
-    </RadioGroup>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
     <Button
-        android:id="@+id/getRadioBtn"
+        android:id="@+id/enableCheckBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
-        android:text="Get Selected RadioButton"
+        android:text="Enable CheckBox"
         android:textColor="#ffffff"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/radioGroup"/>
+        app:layout_constraintTop_toBottomOf="@id/checkBox"/>
+
+    <Button
+        android:id="@+id/disableCheckBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:text="Disable CheckBox"
+        android:textColor="#ffffff"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/enableCheckBtn"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
