--- a/app/src/main/res/layout/checkbox_adapter1.xml
+++ b/app/src/main/res/layout/checkbox_adapter1.xml
@@ -15,4 +15,10 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"/>
+
+
 </RelativeLayout>
