--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -19,4 +19,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab5"
+        android:title="@string/tabmenuitemtextsize"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
