--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -25,4 +25,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab6"
+        android:title="@string/tabmenuitemtextfont"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
