add changetitleontabswitch on Tabactivity7 and also change minor code

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -31,4 +31,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab7"
+        android:title="@string/changetitleontabswitch"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
