add selecttab on TabActivity8

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -37,4 +37,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab8"
+        android:title="@string/selecttabprogrammatically"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
