--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -43,4 +43,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab9"
+        android:title="@string/recyclerviewinsidetab"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
