add ontabchangelistner on TabActivity10 and also remove unuse code

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -49,4 +49,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab10"
+        android:title="@string/ontabchangelistner"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
