--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -55,4 +55,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab11"
+        android:title="@string/detectonclickoncurrenttab"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
