add tabIndicatorBackground on TabActivity12

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -61,4 +61,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab12"
+        android:title="@string/currenttabindicatorbackground"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
