add tablayout inside fragment on TabActivity16

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -85,4 +85,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab16"
+        android:title="@string/tabinsidefragment"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
