--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -91,4 +91,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab17"
+        android:title="@string/tabhost"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
