add passdata between two tab on TabActivity18

--- a/app/src/main/res/menu/tab_option.xml
+++ b/app/src/main/res/menu/tab_option.xml
@@ -97,4 +97,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitytab18"
+        android:title="@string/passdatatotwotab"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
