ViewPager2 vertical orientation in ViewPagerActivity3

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager3"
+        android:title="@string/viewpagervertical"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
