Add addOnPageChangeListener in ViewPagerActivity4

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -13,4 +13,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager4"
+        android:title="@string/addonpagechangelistner"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
