--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -31,4 +31,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager7"
+        android:title="@string/viewpagerwithdifferentlayout"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
