viewpage with dotted indicator in ViewPagerActivity8

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -37,4 +37,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager8"
+        android:title="@string/viewpagerwithdottedindicator"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
