store viewpager fragment state in ViewPagerActivity10

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -49,4 +49,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager10"
+        android:title="@string/viewpagerfragmentstate"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
