--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -55,4 +55,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager11"
+        android:title="@string/addandremoveviewviewpager"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
