--- a/app/src/main/res/layout/activity_view_pager9.xml
+++ b/app/src/main/res/layout/activity_view_pager9.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".ViewPager.ViewPagerActivity9">
 
-    <androidx.viewpager.widget.ViewPager
+    <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
