viewpager in nestedscrollview in ViewPagerActivity12

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -61,4 +61,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager12"
+        android:title="@string/viewpagerwithnestedscrollview"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
