current position of viewpager in ViewPagerActivity13

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -67,4 +67,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager13"
+        android:title="@string/viewpagercurrentposition"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
