fragment in viewpager2 in ViewPagerActivity14

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -73,4 +73,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager14"
+        android:title="@string/fragmentinviewpager2"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
