pagetransformer with viewpager in ViewPagerActivity16

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -85,4 +85,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager16"
+        android:title="@string/pagetransformerviewpager"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
