--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -91,4 +91,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager17"
+        android:title="@string/showpartofviewpager2page"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
