--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -97,4 +97,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager18"
+        android:title="@string/endlessscrollviewpager2"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
