migrate from viewpager to viewpager2 in ViewPagerActivity19

--- a/app/src/main/res/menu/viewpager_option.xml
+++ b/app/src/main/res/menu/viewpager_option.xml
@@ -103,4 +103,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activityviewpager19"
+        android:title="@string/migratetoviewpager2"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
