--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -125,5 +125,18 @@
             android:layout_marginTop="1dp"
             app:layout_constraintTop_toBottomOf="@id/tab"/>
 
+        <Button
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
+            android:onClick="ViewClick"
+            android:text="Kotlin Navigation"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginTop="1dp"
+            app:layout_constraintTop_toBottomOf="@id/viewpager"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
