--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation3"
+        android:title="@string/navigationheaderview"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
