--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -19,4 +19,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation5"
+        android:title="@string/menutextfont"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
