--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -25,4 +25,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation6"
+        android:title="@string/componentnavigation"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
