add navigation drawer and bottom navigation on same activity and also make some minor change

--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -31,4 +31,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation7"
+        android:title="@string/bottomdrawernavigation"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
