--- a/app/src/main/res/layout/activity_navigation5.xml
+++ b/app/src/main/res/layout/activity_navigation5.xml
@@ -30,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:theme="@style/Widget.Navigation5"
+            android:theme="@style/NavigationView5"
             app:headerLayout="@layout/drawer_header"
             app:itemTextColor="#000000"
             app:menu="@menu/drawermenu" />
