--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -37,4 +37,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation8"
+        android:title="@string/activitynav"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
