add addondestinationchangelistener in NavigationActivity9

--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -43,4 +43,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation9"
+        android:title="@string/addondestinationchangelistener"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
