--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -49,4 +49,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation10"
+        android:title="@string/actioninnav"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
