--- a/app/src/main/res/navigation/nav_graph6.xml
+++ b/app/src/main/res/navigation/nav_graph6.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/navFragment6"
         android:name="com.bluapp.kotlinview.Navigation.NavFragment"
-        android:label="fragment_nav_fragment11"
+        android:label="@string/app_name"
         tools:layout="@layout/fragment_nav" />
 
 </navigation>
