add setup actionbar in NavigationActivity14

--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -73,4 +73,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation14"
+        android:title="@string/actionbaroncomponent"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
