add collapsingtoolbar to NavigationActivity15

--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -79,4 +79,10 @@
         android:orderInCategory="100"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/action_activitynavigation15"
+        android:title="@string/collapsingtoolbar"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
+
 </menu>
