add migrate to component navigation in NavigationActivity17

--- a/app/src/main/res/menu/navigation_option.xml
+++ b/app/src/main/res/menu/navigation_option.xml
@@ -92,7 +92,7 @@
         app:showAsAction="never" />
     <item
         android:id="@+id/action_activitynavigation17"
-        android:title="@string/globalaction"
+        android:title="@string/migratetocomponent"
         android:orderInCategory="100"
         app:showAsAction="never" />
 
